# efika-apss

./: .travis.yml  CMakeLists.txt
.github/workflows/: cmake.yml
cmake/: Dependencies.cmake
include/efika/: apss.h  impl.h
include/efika/impl/: sfr.h
src/: CMakeLists.txt  allpairs.c  allpairs_pp.c  bruteforce.c  bruteforce_pp.c  globals.c  idxjoin.c  idxjoin_pp.c  l2ap.c  l2ap_pp.c  mmjoin.c  mmjoin_pp.c  nova.c  nova_pp.c  sfr.c
src/include/efika/apss/: allpairs.h  bit.h  bruteforce.h  idxjoin.h  l2ap.h  mmjoin.h  nova.h  rename.h
src/include/efika/impl/: rename.h
test/: CMakeLists.txt  test_interface.cc
